--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "react": "18.3.1",
-    "react-native": "0.75.4"
+    "react-native": "0.75.4",
+    "react-native-fs": "^2.20.0",
+    "react-native-sqlite-storage": "^6.0.1",
+    "react-native-tcp-socket": "^6.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
